--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 ### Dataset
-main_code/data/
+sssu/main_code/data/
 ​
 # macOS + Windows
 .DS_Store
@@ -84,4 +84,4 @@ venv.bak/
 .idea/
 
 # Submit
-*/submit
+*.csv
